# Project_Card

./: .env.sample  README.md  Readme.md  pyproject.toml
main/: main.py
src/: decorators.py  default_file.json  external_api.py  generators.py  main.py  masks.py  processing.py  reading.py  reports.py  search_end_sort.py  services.py  utils.py  views.py  widget.py
tests/: conftest.py  default_file.json  temp.xlsx  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reports.py  test_services.py  test_utils.py  test_views.py  test_widget.py
